data/typestate_checker_output_cog_dataset_9.txt
dataset9/src/main/java/CodeSnippets.java:61: error: method does not override or implement a method from a supertype
            @Override
            ^
dataset9/src/main/java/CodeSnippets.java:223: error: method does not override or implement a method from a supertype
            @Override
            ^
dataset9/src/main/java/CodeSnippets.java:371: error: method does not override or implement a method from a supertype
            @Override
            ^
dataset9/src/main/java/CodeSnippets.java:31: warning: type.checking.not.run
public class CodeSnippets {
       ^
dataset9/src/main/java/Main.java:1: warning: type.checking.not.run
public class Main {
       ^
Note: dataset9/src/main/java/CodeSnippets.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
2 warnings
